manifests/transmission.yaml
---
# Source: transmission/templates/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-transmission
  labels:
    helm.sh/chart: transmission-0.1.0
    app.kubernetes.io/name: transmission
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "4.0.6"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 9091
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: transmission
    app.kubernetes.io/instance: release-name
---
# Source: transmission/templates/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-transmission
  labels:
    helm.sh/chart: transmission-0.1.0
    app.kubernetes.io/name: transmission
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "4.0.6"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: transmission
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        helm.sh/chart: transmission-0.1.0
        app.kubernetes.io/name: transmission
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/version: "4.0.6"
        app.kubernetes.io/managed-by: Helm
        app: transmission
    spec:
      serviceAccountName: release-name-transmission
      securityContext:
        {}
      containers:
        - name: transmission
          securityContext:
            {}
          image: "linuxserver/transmission:4.0.6"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9091
              protocol: TCP
          livenessProbe:
            failureThreshold: 1
            httpGet:
              path: /
              port: 9091
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 3
          readinessProbe:
            failureThreshold: 2
            httpGet:
              path: /
              port: 9091
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 3
          resources:
            limits:
              cpu: "1"
              memory: 1G
            requests:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - mountPath: /config
              name: transmission-config
            - mountPath: /downloads
              name: downloads
      volumes:
        - hostPath:
            path: /config/transmission_config
            type: Directory
          name: transmission-config
        - hostPath:
            path: /media/transmission/downloads
            type: Directory
          name: downloads
