manifests/radarr.yaml
---
# Source: radarr/templates/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-radarr
  labels:
    helm.sh/chart: radarr-0.1.0
    app.kubernetes.io/name: radarr
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 7878
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/instance: release-name
---
# Source: radarr/templates/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-radarr
  labels:
    helm.sh/chart: radarr-0.1.0
    app.kubernetes.io/name: radarr
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        helm.sh/chart: radarr-0.1.0
        app.kubernetes.io/name: radarr
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/version: "latest"
        app.kubernetes.io/managed-by: Helm
        app: radarr
    spec:
      serviceAccountName: release-name-radarr
      securityContext:
        {}
      containers:
        - name: radarr
          securityContext:
            {}
          image: "linuxserver/radarr:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7878
              protocol: TCP
          livenessProbe:
            failureThreshold: 1
            httpGet:
              path: /
              port: 7878
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 3
          readinessProbe:
            failureThreshold: 2
            httpGet:
              path: /
              port: 7878
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 3
          resources:
            limits:
              cpu: 500m
              memory: 1G
            requests:
              cpu: 100m
              memory: 512Mi
          volumeMounts:
            - mountPath: /config
              name: radarr-config
            - mountPath: /data/movies
              name: movies
            - mountPath: /downloads/complete
              name: downloads-complete
      volumes:
        - hostPath:
            path: /config/radarr_config
            type: Directory
          name: radarr-config
        - hostPath:
            path: /media/movies
            type: Directory
          name: movies
        - hostPath:
            path: /media/transmission/downloads/complete
            type: Directory
          name: downloads-complete
---
# Source: radarr/templates/app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-radarr
  labels:
    helm.sh/chart: radarr-0.1.0
    app.kubernetes.io/name: radarr
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  ingressClassName: traefik
  rules:
    - host: "jishihome.xyz"
      http:
        paths:
          - path: /radarr
            pathType: Prefix
            backend:
              service:
                name: release-name-radarr
                port:
                  number: 7878
